# kaggle_competition_titanic

./: EDA.ipynb  SVM.ipynb  data_preprocessing.ipynb  neural network.ipynb  neural_network.ipynb  pyproject.toml
datasets/: prediction.csv
