[tool.poetry]
name = "titanic_venv"
version = "0.1.0"
description = ""
authors = ["Madbubbl3 <hellinsylvain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
numpy = "^1.24.1"
matplotlib = "^3.6.2"
plotly = "^5.11.0"
seaborn = "^0.12.2"
ipykernel = "^6.20.1"
dtreeviz = "^2.0.0"
tensorflow-macos = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
